--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/nilemandal22/express-js-base-template#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^4.2.1",
     "mysql": "^2.18.1",
     "pug": "^3.0.2"
   }
